Fix Scrollbar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -124,7 +124,7 @@ aside {
 
 .gravatar {
 	float: left;
-	margin-right: 10px;
+	margin-right: 5px;
 }
 
 /* forms */
